tests/sksl/errors/ReservedNameDouble.glsl
### Compilation failed:

error: 1: name 'double' is reserved
int double;
    ^^^^^^
1 error
